@@ -1,4 +1,4 @@
-$Id: History,v 1.14 2000-07-22 10:49:37 asaim Exp $
+$Id: History,v 1.15 2000-07-26 09:26:24 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jul 26, 00, M.Asai (tag intercoms-V02-00-01)
+- Retagging with removing G4StateManager, G4VStateDependent and G4ApplicationState
+  classes.
 
 Jul 22, 00, M.Asai (tag intercoms-V02-00-00)
 - Making G4UImanager as a state dependent class.
